--- a/public/index.html
+++ b/public/index.html
@@ -38,5 +38,9 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script src='https://cdn.jsdelivr.net/npm/sweetalert2@10'></script>
+    <script src='https://cdn.jsdelivr.net/npm/promise-polyfill'></script>
+    <script src='sweetalert2.min.js'></script>
+    <script src='sweetalert2.all.min.js'></script>
   </body>
 </html>
