--- a/public/index.html
+++ b/public/index.html
@@ -38,9 +38,16 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <script src='https://cdn.jsdelivr.net/npm/sweetalert2@10'></script>
-    <script src='https://cdn.jsdelivr.net/npm/promise-polyfill'></script>
-    <script src='sweetalert2.min.js'></script>
-    <script src='sweetalert2.all.min.js'></script>
+    
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-207295183-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-207295183-1');
+    </script>
+
   </body>
 </html>
